// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders the correct header 1`] = `
<header
  className="site-header mb-3 py-3 border-bottom-blue"
>
  <div
    className="container"
  >
    <div
      className="row align-items-center"
    >
      <div
        className="col-auto justify-content-start"
      >
        <withDeprecatedProps(Hyperlink)>
          <img
            alt="edX logo"
            height="30"
            src="edx-sm.png"
            width="60"
          />
        </withDeprecatedProps(Hyperlink)>
      </div>
      <div
        className="col"
      >
        <Link
          replace={false}
          to="/"
        >
          Courses
        </Link>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <withDeprecatedProps(Dropdown)>
          <DropdownButton
            className="btn-light"
          >
            test-username
          </DropdownButton>
          <DropdownMenu
            className="dropdown-menu-right"
          >
            <DropdownItem
              className={null}
              onClick={[Function]}
              type="button"
            >
              Sign Out
            </DropdownItem>
          </DropdownMenu>
        </withDeprecatedProps(Dropdown)>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders the header correctly when toggling is allowed, and dark mode is on 1`] = `
<header
  className="site-header mb-3 py-3 border-bottom-blue"
>
  <div
    className="container"
  >
    <div
      className="row align-items-center"
    >
      <div
        className="col-auto justify-content-start"
      >
        <withDeprecatedProps(Hyperlink)>
          <img
            alt="edX logo"
            height="30"
            src="edx-sm.png"
            width="60"
          />
        </withDeprecatedProps(Hyperlink)>
      </div>
      <div
        className="col"
      >
        <Link
          replace={false}
          to="/"
        >
          Courses
        </Link>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Switch to 
          light mode
        </button>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <withDeprecatedProps(Dropdown)>
          <DropdownButton
            className="btn-light"
          >
            test-username
          </DropdownButton>
          <DropdownMenu
            className="dropdown-menu-right"
          >
            <DropdownItem
              className={null}
              onClick={[Function]}
              type="button"
            >
              Sign Out
            </DropdownItem>
          </DropdownMenu>
        </withDeprecatedProps(Dropdown)>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders the header correctly when users pass a querystring param to allow dark mode toggling 1`] = `
<header
  className="site-header mb-3 py-3 border-bottom-blue"
>
  <div
    className="container"
  >
    <div
      className="row align-items-center"
    >
      <div
        className="col-auto justify-content-start"
      >
        <withDeprecatedProps(Hyperlink)>
          <img
            alt="edX logo"
            height="30"
            src="edx-sm.png"
            width="60"
          />
        </withDeprecatedProps(Hyperlink)>
      </div>
      <div
        className="col"
      >
        <Link
          replace={false}
          to="/"
        >
          Courses
        </Link>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Switch to 
          dark mode
        </button>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <withDeprecatedProps(Dropdown)>
          <DropdownButton
            className="btn-light"
          >
            test-username
          </DropdownButton>
          <DropdownMenu
            className="dropdown-menu-right"
          >
            <DropdownItem
              className={null}
              onClick={[Function]}
              type="button"
            >
              Sign Out
            </DropdownItem>
          </DropdownMenu>
        </withDeprecatedProps(Dropdown)>
      </div>
    </div>
  </div>
</header>
`;
